--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,27 +31,13 @@
         android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvScoreMonde"
+            android:id="@+id/rvScore"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_weight="1.5">
 
         </androidx.recyclerview.widget.RecyclerView>
-
-        <View
-            android:id="@+id/divider2"
-            android:layout_width="1dp"
-            android:layout_height="match_parent"
-            android:layout_weight=".1"
-            android:background="?android:attr/listDivider"
-            android:backgroundTint="#000000" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvScorePersonnel"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
 
     </LinearLayout>
 
