--- a/app/src/main/res/layout/scoreboard_personnel.xml
+++ b/app/src/main/res/layout/scoreboard_personnel.xml
@@ -36,7 +36,7 @@
                     android:text="#1" />
 
                 <TextView
-                    android:id="@+id/tvUsager"
+                    android:id="@+id/tvUser"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -44,7 +44,7 @@
                     android:text="Nom d'utilisateur" />
 
                 <TextView
-                    android:id="@+id/tvTemps"
+                    android:id="@+id/tvScore"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
