--- a/app/src/main/res/layout/scoreboard.xml
+++ b/app/src/main/res/layout/scoreboard.xml
@@ -6,11 +6,13 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvPosition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="30dp"
+        android:minWidth="30dp"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/tvUser"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,8 +22,9 @@
         android:id="@+id/tvUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="25dp"
+        android:minWidth="100dp"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/tvScore"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,8 +33,9 @@
         android:id="@+id/tvScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="80dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="25dp"
+        android:minWidth="100dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
