--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -6,5 +6,10 @@
         android:id="@+id/menuConnexion"
         android:icon="@drawable/ic_login"
         android:title="connexion"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/idDeconnexion"
+        android:icon="@drawable/ic_logout"
+        android:title="déconnexion"
+        app:showAsAction="ifRoom" />
 </menu>
