--- a/app/src/main/res/layout/scoreboard.xml
+++ b/app/src/main/res/layout/scoreboard.xml
@@ -3,15 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/border">
 
     <TextView
         android:id="@+id/tvPosition"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="85dp"
+        android:layout_height="23dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
         android:layout_marginEnd="30dp"
+        android:background="@drawable/border_txt"
         android:minWidth="30dp"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/tvUser"
@@ -20,10 +21,10 @@
 
     <TextView
         android:id="@+id/tvUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_width="101dp"
+        android:layout_height="22dp"
         android:layout_marginEnd="25dp"
+        android:background="@drawable/border_txt"
         android:minWidth="100dp"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/tvScore"
@@ -31,12 +32,12 @@
 
     <TextView
         android:id="@+id/tvScore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_width="103dp"
+        android:layout_height="23dp"
         android:layout_marginEnd="25dp"
         android:minWidth="100dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
