--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="rouge">#960018</color>
+    <color name="vert">#00FF00</color>
+    <color name="dark_grey">#FF212121</color>
 </resources>
