--- a/app/src/main/res/layout/scoreboard.xml
+++ b/app/src/main/res/layout/scoreboard.xml
@@ -8,11 +8,12 @@
 
     <TextView
         android:id="@+id/tvPosition"
-        android:layout_width="85dp"
-        android:layout_height="23dp"
+        android:layout_width="93dp"
+        android:layout_height="42dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="30dp"
         android:background="@drawable/border_txt"
+        android:gravity="center|left"
         android:text="TextView"
         app:layout_constraintEnd_toStartOf="@+id/tvUser"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,19 +21,25 @@
 
     <TextView
         android:id="@+id/tvUser"
-        android:layout_width="101dp"
-        android:layout_height="22dp"
+        android:layout_width="123dp"
+        android:layout_height="42dp"
         android:layout_marginEnd="25dp"
         android:background="@drawable/border_txt"
+        android:forceHasOverlappingRendering="false"
+        android:gravity="center|left"
+        android:paddingRight="20dp"
         android:text="TextView"
+        app:autoSizeMaxTextSize="14sp"
+        app:autoSizeTextType="uniform"
         app:layout_constraintEnd_toStartOf="@+id/tvScore"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvScore"
-        android:layout_width="103dp"
-        android:layout_height="23dp"
+        android:layout_width="106dp"
+        android:layout_height="40dp"
         android:layout_marginEnd="25dp"
+        android:gravity="center|left"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
