--- a/app/src/main/res/layout/activity_inscription.xml
+++ b/app/src/main/res/layout/activity_inscription.xml
@@ -75,4 +75,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPasswordInscrip" />
 
+    <TextView
+        android:id="@+id/tvErreur"
+        android:layout_width="225dp"
+        android:layout_height="93dp"
+        android:layout_marginTop="49dp"
+        android:text="TextView"
+        android:textSize="10sp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btValider" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
